--- a/Web_data_collection/scrap_flightradar/scrap_flightradar.Rmd
+++ b/Web_data_collection/scrap_flightradar/scrap_flightradar.Rmd
@@ -30,7 +30,7 @@ library(RSelenium)
 
 We see two methods to capture departures and arrivals data for airport on **FlightRadar** website, using a browser running on a server, and using an XHR request.
 
-For each airports page, FlightRadar website offer the possibility to see general informations, departures and arrivals flights information. For this tutorial we try to scrape the [Bordeaux Mérignac Airport BOD](https://www.flightradar24.com/data/airports/bod/) departures data [page](https://www.flightradar24.com/data/airports/bod/departures) and arrival flights [page](https://www.flightradar24.com/data/airports/bod/arrivals)
+For each airports page, FlightRadar website offer the possibility to see general informations, departures and arrivals flights information. For this tutorial we try to scrape the [Bordeaux Mérignac Airport BOD](https://www.flightradar24.com/data/airports/bod/) arrival flights [page](https://www.flightradar24.com/data/airports/bod/arrivals)
 
 As you could see if you go to departures pages, you have two interesting buttons, one at the top of the page, and one at the bottom of the page. 
 
@@ -39,7 +39,7 @@ As you could see if you go to departures pages, you have two interesting buttons
 
 To display all data available (something like 24h of past and future departures/arrivals), we simulate multiples clic on this two buttons, and we stop this behavior only when these buttons disapears from the page.
 
-At the end, we use Docker to export our script on some distant server for autonomous execution.
+At the end of this tutorial, we present how to use [Docker](https://www.docker.com/) container technology to export our webscrapping script on some remote server for an autonomous execution 24/24h. 
 
 # Using Selenium server browser
 
@@ -73,7 +73,7 @@ Selenium is a fast moving project, and some release are really buggy, so try to 
 
 **!! Before continuing, read the documentation on Docker at the bottom of this document, it explain what is really Docker/images/container, and it explain how to install images/containers on your system !!**
 
-When it's done, we `pull and run` [one of](https://github.com/SeleniumHQ/docker-selenium) Docker Selenium-Server image using terminal. For this tutorial we use Firefox !
+When it's done, we `pull and run` [one of](https://github.com/SeleniumHQ/docker-selenium) Docker Selenium-Server image using terminal. For this tutorial we use **Firefox** !
 
 In classic context (good internet connection), we pull images directly from the Docker Hub server, a central repository like CRAN for R.
 
@@ -81,7 +81,7 @@ In classic context (good internet connection), we pull images directly from the 
 sudo docker pull selenium/standalone-firefox:3.14.0-arsenic
 ```
 
-**But, because the image is heavy in size (1GO for the two images used in this tutorial)**, we prefer to directly load the image given by USB key by your teachers. Open a terminal on the folder where located the images.
+**But, because the image is heavy in size (1 GO for the two images used in this tutorial)**, we prefer to directly load the image given by USB key by your teachers. Open a terminal on the folder where located the images.
 
 ```bash
 sudo docker load --input=r-alpine.tar
@@ -94,7 +94,7 @@ Create the Selenium container which contain Firefox :
 sudo docker run --shm-size=2g --name selenium -d -p 4445:4444 selenium/standalone-firefox:3.14.0-arsenic
 ```
 
-Type `sudo docker ps` to see if server correctly run and listen to port 4445.
+Type `sudo docker ps` to see if server correctly run and listen to port **4445**
 
 ### Connect to Selenium Server
 
@@ -125,7 +125,8 @@ Some of them :
 - `remDr$navigate("https://www.google.fr")` : navigate to url
 - `remDr$screenshot(display = TRUE)` : take a screenshoot of the webpage and display it in RStudio Viewer
 - `remDr$findElement(...)` : Find and element in the html structure, using different method : xpath, css, etc.
-- `remDr$executeScript(...`) : Execute a js script in the remote browser
+- `remDr$executeScript(...)` : Execute a js script in the remote browser
+- `remDr$clickElement(...)` : Clic on element
 
 ## From analysis to automation
 
@@ -133,11 +134,11 @@ Some of them :
 
 Open `Web Developer tools` in your favorite browser on the arrivals webpage of BOD : `https://www.flightradar24.com/data/airports/bod/arrivals`
 
-We investigate what happens in the html code when the load earlier or load later button . Why we do that ? To understand how we could automate things.
+We investigate what happens in the html code when we clic the **load earlier** or **load later** button. Why we do that ? To understand how we could automate things later.
 
-Because we want to automate clic on this two buttons, so we need to understand WHEN we need to stop clicking :) If we clic an infinite number of time, an error probably trigger when one of the two button disapear.
+Because we want to automate clic on this two buttons, we need to understand WHEN we need to stop clicking :) If we clic an infinite number of time, an error probably trigger when one of the two button disapear.
 
-Select the Selector tools (sic) and click on the load earlier flights button.
+Select the **Selector tools** and click on the load earlier button.
 
 <img src='images/webdeveloper.png'/>
 
@@ -507,11 +508,13 @@ Install docker-ce :
 sudo apt-get install docker-ce
 ```
 
+You are ready to jump to the tutorial which correspond to your OS.
+
 ### Windows and Mac Way
 
 There are two way to install Docker for Windows and Mac, a new way [Windows](https://docs.docker.com/docker-for-windows/) / [Mac](https://docs.docker.com/docker-for-mac/) and an old way. For this tutorial we use the the old way due to better compatibility.
 
-Install Docker Tools for windows using the `DockerToolbox.exe` (or `.dmg` for mac) file. You could find the official documentation is available here [Windows]( https://docs.docker.com/toolbox/toolbox_install_windows/) and [Mac]()https://docs.docker.com/toolbox/toolbox_install_mac/
+Install Docker Tools for windows using the `DockerToolbox.exe` (or `.dmg` for mac) file. You could find the official documentation is available here [Windows]( https://docs.docker.com/toolbox/toolbox_install_windows/) and [Mac](https://docs.docker.com/toolbox/toolbox_install_mac/)
 
 <img src='images/SetupDockerToolbox.jpg'/>
 
@@ -537,6 +540,7 @@ Restart your computer, and try to activate an option in the BIOS (Del key during
 
 <img src='images/inter-virtualization-technology-HP.jpg'/>
 
+You are ready to jump to the tutorial which correspond to your OS.
 
 ## Tutorial Docker / Linux
 
