--- a/Web_data_collection/tuto_scraping/tuto_scraping.Rmd
+++ b/Web_data_collection/tuto_scraping/tuto_scraping.Rmd
@@ -698,7 +698,7 @@ One rule : *If you see it on your browser, so you can get it*
 <div class="left">
 ![](images/leboncoin.jpg){width=10%}
 
-- First tutorial (beginer), open `/Web_data_collection/scrap_leboncoin/projet_leboncoin.Rproj` or directly the [html page online](https://dynamitestaff.github.io/R-workshops/Web_data_collection/scrap_leboncoin/projet_leboncoin.html)
+- First tutorial (beginer), open project `projet_leboncoin.Rproj` or directly the [html page online](https://dynamitestaff.github.io/R-workshops/Web_data_collection/scrap_leboncoin/projet_leboncoin.html)
 
 
 </div>
@@ -706,7 +706,7 @@ One rule : *If you see it on your browser, so you can get it*
 
 ![](images/flightradar.jpg){width=10%} ![](images/docker.jpg){width=10%}
 
-- Second tutorial (advanced), open `/Web_data_collection/scrap_flightradar/scrap_flightradar.Rmd` or directly the [html page online](https://dynamitestaff.github.io/R-workshops/Web_data_collection/scrap_flightradar/scrap_flightradar.html) 
+- Second tutorial (advanced), open project `scrap_flightradar.Rmd` or directly the [html page online](https://dynamitestaff.github.io/R-workshops/Web_data_collection/scrap_flightradar/scrap_flightradar.html) 
 
 **!Warning!** You need Docker installed 
 
